--- a/next-portfolio/my-portfolio/package.json
+++ b/next-portfolio/my-portfolio/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.0",
+    "emailjs-com": "^3.2.0",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18"
@@ -20,7 +22,7 @@
     "autoprefixer": "^10.0.1",
     "framer-motion": "^11.0.14",
     "postcss": "^8",
-    "react-icons": "^5.0.1",
+    "react-icons": "^5.1.0",
     "swiper": "^11.0.7",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
