--- a/next-portfolio/my-portfolio/package.json
+++ b/next-portfolio/my-portfolio/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^9.5.0",
     "framer-motion": "^11.0.14",
     "postcss": "^8",
     "react-icons": "^5.1.0",
